# claw

./: LICENSE.txt  README.md
blueprints/: claw_beliefs.json  claw_compaction.json  claw_journal.json  claw_sessions.json
docs/: Workstreams.md  claw_implementation.md  claw_specs.md  paralell_conversations.md
installer/: upload_blueprints.py
package/: pyproject.toml  requirements.txt  setup.py
package/claw/: __init__.py
package/claw/handlers/: __init__.py  beliefs.py  class_prototypes.py  compaction.py  context.py  gateway.py  generic_agent.py  journal.py  loop.py  models.py  parallel_agent.py  sessions.py  subagents.py  tools.py  workstreams.py
