[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-mod"
version = "1.0.0"
description = "Claw extension — OpenClaw-style agent runtime handlers"
authors = [
    {name = "NOMA Team"}
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
